--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -24,21 +24,16 @@
 </div>
 
 <div class="container">
-    <div class="row text-center">
-        <div class="col-3">
+    <div class="row text-center d-flex justify-content-center">
+        <div class="col-4">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Удобный сервис рассылок</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$ 140</h1>
-                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>- Неограниченная лицензия</li>
-                        <li>- Поддержка</li>
-                        <li>- Установка на сервер</li>
-                        <li>- Получение обновлений</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                    <h5>Последних 5 добавленных продукта</h5>
+                        <ul>
+                            {% for product in latest_products %}
+                            <li>{{ product.name }} - {{ product.purchase_price }} руб.</li>
+                            {% endfor %}
+                        </ul>
                 </div>
             </div>
         </div>
