--- a/catalog/templates/catalog/header.html
+++ b/catalog/templates/catalog/header.html
@@ -14,11 +14,19 @@
           <li class="nav-item">
             <a class="nav-link" href="/contacts/">Контакты</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item me-4">
             <a class="nav-link" href="/add/">Добавить продукт</a>
           </li>
+          <hr class="me-4" style="border: none; border-left: 2px solid white; height: 10px;"/>
           <li class="nav-item">
-            <button type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalSuccess">
+            <a class="nav-link" href="/blog/">Блог</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link me-4" href="/blog/add_post">Добавить пост</a>
+          </li>
+          <hr class="me-4" style="border: none; border-left: 2px solid white; height: 10px;"/>
+          <li class="nav-item">
+            <button type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalSignin">
                 Вход
             </button>
             {% include 'catalog/sing_up.html' %}
