--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -5,14 +5,14 @@
 
 {% block content %}
 
-<div class="d-flex flex-wrap justify-content-start">
+<div class="d-flex flex-wrap justify-content-center">
     {% for product in products %}
     <div class="card mt-4 mb-4 me-4" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">{{ product }}</h5>
         <h6 class="card-subtitle mb-2 text-body-secondary">Цена {{ product.purchase_price }} ₽</h6>
         <p class="card-text">{{ product.description|truncatechars:50 }}</p>
-        <a href="{% url 'catalog:product_details' product.pk  %}" class="btn btn-sm btn-secondary">Посмотреть</a>
+        <a href="{% url 'catalog:product_details' product.pk  %}" class="btn btn-sm btn-secondary d-block mx-auto">Посмотреть</a>
       </div>
     </div>
     {% endfor %}
