--- a/catalog/templates/catalog/edit_product.html
+++ b/catalog/templates/catalog/edit_product.html
@@ -1,11 +1,11 @@
 {% extends 'catalog/base.html' %}
 
-{% block title %}Добавить новый товар{% endblock %}
+{% block title %}Редактировать{% endblock %}
 
 {% block content %}
 
 <div class="container mt-4">
-    <h2 class="mb-4">Добавить новый товар</h2>
+    <h2 class="mb-4">Редактировать продукт</h2>
     <div class="row">
         <div class="col-md-6">
             <form method="post" enctype="multipart/form-data" class="border p-4 rounded shadow-sm">
@@ -43,7 +43,7 @@
 
 
                 <button type="submit" class="btn btn-primary">Сохранить</button>
-                <a href="{% url 'catalog:index' %}" class="btn btn-secondary">Назад</a>
+                <a href="{% url 'catalog:product_details' products.pk %}" class="btn btn-secondary">Назад</a>
             </form>
         </div>
     </div>
