--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -27,9 +27,11 @@
 
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group-2">
+          {% if user.is_authenticated %}
           <a href="{% url 'blog:edit_post' post.pk %}" class="btn btn-sm btn-primary">Редактировать</a>
-          <a href="{% url 'blog:index' %}" class="btn btn-sm btn-secondary">Назад</a>
           <a href="{% url 'blog:delete_post' post.pk %}" class="btn btn-sm btn-danger">Удалить</a>
+          {% endif %}
+          <a href="{% url 'blog:index' %}" class="btn btn-sm btn-secondary">Назад</a>
         </div>
       </div>
     </div>
