--- a/catalog/templates/catalog/product_details.html
+++ b/catalog/templates/catalog/product_details.html
@@ -26,8 +26,10 @@
         <p class="card-text">Дата последнего изменения {{ products.updated_at }}</p>
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group-2">
+            {% if user.is_authenticated %}
             <a href="{% url 'catalog:edit_product' products.pk %}" class="btn btn-sm btn-primary me-2">Редактировать</a>
             <a href="{% url 'catalog:delete_product' products.pk %}" class="btn btn-sm btn-danger me-2">Удалить</a>
+            {% endif %}
             <a href="{% url 'catalog:index' %}" class="btn btn-sm btn-secondary me-2">Назад</a>
           </div>
         </div>
