--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -1,24 +1,15 @@
 <!doctype html>
 <html lang="ru" class="h-100" class="h-100" data-bs-theme="auto">
   <head><script src="/static/js/color-modes.js"></script>
-
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <!--	<meta name="description" content="Пример на bootstrap 5: Прижатый футер с меню в нижней части страницы · Версия v5.3.1">-->
 	<title>{% block title %}Главная станица{% endblock %}</title>
 
 	<!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-
-
-	<!-- Favicons -->
-<!--	<link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">-->
-<!--	<link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">-->
-<!--	<link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">-->
-<!--	<link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">-->
-<!--	<link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">-->
-<!--	<link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">-->
-<!--	<meta name="theme-color" content="#712cf9">-->
 
 
     <style>
