--- a/catalog/templates/catalog/edit_product.html
+++ b/catalog/templates/catalog/edit_product.html
@@ -4,49 +4,61 @@
 
 {% block content %}
 
-<div class="container mt-4">
-    <h2 class="mb-4">Редактировать продукт</h2>
-    <div class="row">
-        <div class="col-md-6">
-            <form method="post" enctype="multipart/form-data" class="border p-4 rounded shadow-sm">
-                {% csrf_token %}
 
-                <div class="mb-3">
-                    {{ form.name.label_tag }}
-                    {{ form.name }}
-                    {{ form.name.errors }}
-                </div>
+    <div class="container mt-4">
+        <h2 class="mb-4">Редактировать продукт</h2>
+        <div class="row">
+            <div class="col-md-6">
+                <form method="post" enctype="multipart/form-data" class="border p-4 rounded shadow-sm">
+                    {% csrf_token %}
 
-                <div class="mb-3">
-                    {{ form.description.label_tag }}
-                    {{ form.description }}
-                    {{ form.description.errors }}
-                </div>
-
-                <div class="mb-3">
-                    {{ form.images.label_tag }}
-                    {{ form.images }}
-                    {{ form.images.errors }}
-                </div>
-
-                <div class="mb-3">
-                    {{ form.category.label_tag }}
-                    {{ form.category }}
-                    {{ form.category.errors }}
-                </div>
-
-                <div class="mb-3">
-                    {{ form.purchase_price.label_tag }}
-                    {{ form.purchase_price }}
-                    {{ form.purchase_price.errors }}
-                </div>
+                    <div class="mb-3">
+                        <h5>Владелец - {{ products.owner.email }}</h5>
+                    </div>
 
 
-                <button type="submit" class="btn btn-primary">Сохранить</button>
-                <a href="{% url 'catalog:product_details' products.pk %}" class="btn btn-secondary">Назад</a>
-            </form>
+                    <div class="mb-3">
+                        {{ form.name.label_tag }}
+                        {{ form.name }}
+                        {{ form.name.errors }}
+                    </div>
+
+                    <div class="mb-3">
+                        {{ form.description.label_tag }}
+                        {{ form.description }}
+                        {{ form.description.errors }}
+                    </div>
+
+                    <div class="mb-3">
+                        {{ form.images.label_tag }}
+                        {{ form.images }}
+                        {{ form.images.errors }}
+                    </div>
+
+                    <div class="mb-3">
+                        {{ form.category.label_tag }}
+                        {{ form.category }}
+                        {{ form.category.errors }}
+                    </div>
+
+                    <div class="mb-3">
+                        {{ form.is_published.label_tag }}
+                        {{ form.is_published }}
+                        {{ form.is_published.errors }}
+                    </div>
+
+                    <div class="mb-3">
+                        {{ form.purchase_price.label_tag }}
+                        {{ form.purchase_price }}
+                        {{ form.purchase_price.errors }}
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                    <a href="{% url 'catalog:product_details' products.pk %}" class="btn btn-secondary">Назад</a>
+                </form>
+            </div>
         </div>
     </div>
-</div>
+
 
 {% endblock %}
