--- a/catalog/templates/catalog/product_details.html
+++ b/catalog/templates/catalog/product_details.html
@@ -8,34 +8,38 @@
 
 
 <div class="d-flex justify-content-center mt-2 mb-3">
-  <div class="card shadow-sm" style="width: 600px;">
-    <div class="card-body d-flex align-items-start">
-      <img src="{{ products.images | media_filter }}" style="width: 150px; height: auto; margin-right: 20px;" alt="Тут изображение">
+    <div class="card shadow-sm" style="width: 600px;">
+        <div class="card-body d-flex align-items-start">
+            <img src="{{ products.images | media_filter }}" style="width: 150px; height: auto; margin-right: 20px;" alt="Тут изображение">
 
-      <div style="flex-grow: 1;">
-        <p class="card-text">{{ products }}</p>
-        {% if products.description %}
-          <p class="card-text">Описание:</p>
-          <p class="card-text">{{ products.description }}</p>
-        {% else %}
-          <p>Описание отсутствует.</p>
-        {% endif %}
-        <p class="card-text">Цена {{ products.purchase_price }} ₽</p>
-        <p class="card-text">Категория продукта - {{ products.category }}</p>
-        <p class="card-text">Дата создания продука - {{ products.created_at }}</p>
-        <p class="card-text">Дата последнего изменения {{ products.updated_at }}</p>
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="btn-group-2">
-            {% if user.is_authenticated %}
-            <a href="{% url 'catalog:edit_product' products.pk %}" class="btn btn-sm btn-primary me-2">Редактировать</a>
-            <a href="{% url 'catalog:delete_product' products.pk %}" class="btn btn-sm btn-danger me-2">Удалить</a>
-            {% endif %}
-            <a href="{% url 'catalog:index' %}" class="btn btn-sm btn-secondary me-2">Назад</a>
-          </div>
+            <div style="flex-grow: 1;">
+                <h4 class="card-text">{{ products }}</h4>
+                <h5 class="card-text">Владелец - {{ products.owner.email }}</h5>
+                {% if products.description %}
+                <p class="card-text">Описание:</p>
+                <p class="card-text">{{ products.description }}</p>
+                {% else %}
+                <p>Описание отсутствует.</p>
+                {% endif %}
+                <p class="card-text">Цена - {{ products.purchase_price }} ₽</p>
+                <p class="card-text">Категория продукта - {{ products.category }}</p>
+                <p class="card-text">Дата создания продука - {{ products.created_at }}</p>
+                <p class="card-text">Дата последнего изменения - {{ products.updated_at }}</p>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group-2">
+                        {% if user.is_authenticated %}
+                            {% if products.owner == user or request.user.is_superuser or request.user|in_group:"Модератор продуктов" %}
+                                <a href="{% url 'catalog:edit_product' products.pk %}" class="btn btn-sm btn-primary me-2 mb-1">Редактировать</a>
+                                <a href="{% url 'catalog:delete_product' products.pk %}" class="btn btn-sm btn-danger me-2 mb-1">Удалить</a>
+                            {% endif %}
+                        {% endif %}
+                        <a href="{% url 'catalog:index' %}" class="btn btn-sm btn-secondary me-2 mb-1">Назад</a>
+
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 
 
